WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185237
AX: Missing kAXSWebAccessibilityEventsEnabledNotification causes a crash
https://bugs.webkit.org/show_bug.cgi?id=185237
Summary
AX: Missing kAXSWebAccessibilityEventsEnabledNotification causes a crash
Nan Wang
Reported
2018-05-02 22:05:57 PDT
0 com.apple.WebKit 0x000000010ea66de3 -[WKWebView _initializeWithConfiguration:] + 5206 1 com.apple.WebKit 0x000000010ea6783c -[WKWebView initWithFrame:configuration:] + 98 2 com.apple.Safari.Shared 0x000000010dc4e801 -[WBSSiteMetadataManager siteMetadataProvider:webViewOfSize:withConfiguration:] + 241 3 com.apple.Safari.Shared 0x000000010dc5d671 -[WBSTouchIconCache webViewMetadataFetchOperation:webViewOfSize:withConfiguration:] + 93 4 com.apple.Safari.Shared 0x000000010dc68d62 -[WBSWebViewMetadataFetchOperation setUpWebViewIfNeeded] + 152 5 com.apple.Safari.Shared 0x000000010dc60239 -[WBSTouchIconFetchOperation startOffscreenFetching] + 302 <
rdar://problem/39928458
>
Attachments
patch
(1.94 KB, patch)
2018-05-02 22:18 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2018-05-02 22:18:07 PDT
Created
attachment 339388
[details]
patch
mitz
Comment 2
2018-05-02 22:23:30 PDT
Comment on
attachment 339388
[details]
patch Looks good to me, but the review flag wasn’t set to ? so I’m not sure if I should r+.
WebKit Commit Bot
Comment 3
2018-05-02 23:06:03 PDT
Comment on
attachment 339388
[details]
patch Clearing flags on attachment: 339388 Committed
r231295
: <
https://trac.webkit.org/changeset/231295
>
WebKit Commit Bot
Comment 4
2018-05-02 23:06:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug