AX: Missing kAXSWebAccessibilityEventsEnabledNotification causes a crash https://bugs.webkit.org/show_bug.cgi?id=185237

Reviewed by Dan Bernstein.

When libAccessibility.dylib is missing, the compiler would optimize out the global
notification and lead to a crash. Fixed it by using the isNullFunction check instead,
since we are sure the global notification would be there when the corresponding function
is available.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _initializeWithConfiguration:]):


Canonical link: https://commits.webkit.org/200730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231295 268f45cc-cd09-0410-ab3c-d52691b4dbfc